# 999997-SD-34-SM-Menu

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  IP-ASSIGNMENT.md  LICENSE-APACHE.md  LICENSE-MIT.md  README.md  SECURITY.md  USAGE.md
.github/workflows/: README.md  rust-release.yml  sm-rust-ci.yml
examples/: custom_command.rs
src/: integration_tests.rs  lib.rs  main.rs
src/commands/: axis.rs  base.rs  edit.rs  file.rs  help.rs  load.rs  mod.rs  quit.rs  save.rs  show.rs  vers.rs  view.rs
src/core/: command.rs  context.rs  error.rs  mod.rs  security.rs
src/ui/: disp.rs  mod.rs
tests/: integration_tests.rs
