[package]
name = "sm-menu"
version = "0.1.0"
edition = "2024"
description = "A simple interactive CLI tool emphasizing simplicity"
license = "MIT OR Apache-2.0"

[[bin]]
name = "sm-menu"
path = "src/main.rs"

[dependencies]
# Following project guidelines: standard library only

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = 'abort'     # Smaller binary
